Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -32,3 +32,4 @@ Temporary commit content 325
 Temporary commit content 342
 Temporary commit content 354
 Temporary commit content 359
+Temporary commit content 373
