Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -387,3 +387,4 @@ Temporary commit content 4583
 Temporary commit content 4588
 Temporary commit content 4613
 Temporary commit content 4617
+Temporary commit content 4625
