Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -176,3 +176,4 @@ Temporary commit content 1900
 Temporary commit content 1904
 Temporary commit content 1915
 Temporary commit content 1932
+Temporary commit content 1935
