Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -118,3 +118,4 @@ Temporary commit content 1290
 Temporary commit content 1312
 Temporary commit content 1313
 Temporary commit content 1316
+Temporary commit content 1333
