Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -187,3 +187,4 @@ Temporary commit content 2016
 Temporary commit content 2024
 Temporary commit content 2029
 Temporary commit content 2063
+Temporary commit content 2085
