Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -200,3 +200,4 @@ Temporary commit content 2222
 Temporary commit content 2224
 Temporary commit content 2239
 Temporary commit content 2273
+Temporary commit content 2287
