Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -309,3 +309,4 @@ Temporary commit content 3520
 Temporary commit content 3533
 Temporary commit content 3551
 Temporary commit content 3560
+Temporary commit content 3564
