Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -302,3 +302,4 @@ Temporary commit content 3444
 Temporary commit content 3453
 Temporary commit content 3470
 Temporary commit content 3475
+Temporary commit content 3489
