Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -404,3 +404,4 @@ Temporary commit content 4766
 Temporary commit content 4769
 Temporary commit content 4788
 Temporary commit content 4814
+Temporary commit content 4824
