Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -265,3 +265,4 @@ Temporary commit content 3090
 Temporary commit content 3093
 Temporary commit content 3094
 Temporary commit content 3095
+Temporary commit content 3101
