Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -285,3 +285,4 @@ Temporary commit content 3228
 Temporary commit content 3234
 Temporary commit content 3241
 Temporary commit content 3278
+Temporary commit content 3289
