Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -260,3 +260,4 @@ Temporary commit content 3062
 Temporary commit content 3085
 Temporary commit content 3086
 Temporary commit content 3088
+Temporary commit content 3089
