Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -62,3 +62,4 @@ Temporary commit content 576
 Temporary commit content 585
 Temporary commit content 591
 Temporary commit content 599
+Temporary commit content 600
