Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -354,3 +354,4 @@ Temporary commit content 4204
 Temporary commit content 4219
 Temporary commit content 4228
 Temporary commit content 4229
+Temporary commit content 4242
