Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -259,3 +259,4 @@ Temporary commit content 3060
 Temporary commit content 3062
 Temporary commit content 3085
 Temporary commit content 3086
+Temporary commit content 3088
