Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -99,3 +99,4 @@ Temporary commit content 969
 Temporary commit content 981
 Temporary commit content 998
 Temporary commit content 1024
+Temporary commit content 1026
