Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -414,3 +414,4 @@ Temporary commit content 4916
 Temporary commit content 4924
 Temporary commit content 4940
 Temporary commit content 4948
+Temporary commit content 4954
