Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -222,3 +222,4 @@ Temporary commit content 2631
 Temporary commit content 2632
 Temporary commit content 2633
 Temporary commit content 2649
+Temporary commit content 2658
