Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -134,3 +134,4 @@ Temporary commit content 1458
 Temporary commit content 1467
 Temporary commit content 1491
 Temporary commit content 1498
+Temporary commit content 1508
