Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -296,3 +296,4 @@ Temporary commit content 3411
 Temporary commit content 3415
 Temporary commit content 3430
 Temporary commit content 3434
+Temporary commit content 3440
