Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -307,3 +307,4 @@ Temporary commit content 3502
 Temporary commit content 3518
 Temporary commit content 3520
 Temporary commit content 3533
+Temporary commit content 3551
