Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -311,3 +311,4 @@ Temporary commit content 3551
 Temporary commit content 3560
 Temporary commit content 3564
 Temporary commit content 3574
+Temporary commit content 3587
