Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -92,3 +92,4 @@ Temporary commit content 849
 Temporary commit content 861
 Temporary commit content 886
 Temporary commit content 903
+Temporary commit content 913
