Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -220,3 +220,4 @@ Temporary commit content 2605
 Temporary commit content 2607
 Temporary commit content 2631
 Temporary commit content 2632
+Temporary commit content 2633
