Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -251,3 +251,4 @@ Temporary commit content 2985
 Temporary commit content 3001
 Temporary commit content 3014
 Temporary commit content 3019
+Temporary commit content 3033
