Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -192,3 +192,4 @@ Temporary commit content 2089
 Temporary commit content 2093
 Temporary commit content 2128
 Temporary commit content 2141
+Temporary commit content 2142
