Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -196,3 +196,4 @@ Temporary commit content 2142
 Temporary commit content 2164
 Temporary commit content 2204
 Temporary commit content 2220
+Temporary commit content 2222
