Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -391,3 +391,4 @@ Temporary commit content 4625
 Temporary commit content 4650
 Temporary commit content 4669
 Temporary commit content 4686
+Temporary commit content 4692
