Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -301,3 +301,4 @@ Temporary commit content 3441
 Temporary commit content 3444
 Temporary commit content 3453
 Temporary commit content 3470
+Temporary commit content 3475
