Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -115,3 +115,4 @@ Temporary commit content 1264
 Temporary commit content 1274
 Temporary commit content 1278
 Temporary commit content 1290
+Temporary commit content 1312
