Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -268,3 +268,4 @@ Temporary commit content 3095
 Temporary commit content 3101
 Temporary commit content 3113
 Temporary commit content 3119
+Temporary commit content 3126
