Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -411,3 +411,4 @@ Temporary commit content 4868
 Temporary commit content 4879
 Temporary commit content 4909
 Temporary commit content 4916
+Temporary commit content 4924
