Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -413,3 +413,4 @@ Temporary commit content 4909
 Temporary commit content 4916
 Temporary commit content 4924
 Temporary commit content 4940
+Temporary commit content 4948
