Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -291,3 +291,4 @@ Temporary commit content 3303
 Temporary commit content 3322
 Temporary commit content 3346
 Temporary commit content 3348
+Temporary commit content 3368
