Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -284,3 +284,4 @@ Temporary commit content 3226
 Temporary commit content 3228
 Temporary commit content 3234
 Temporary commit content 3241
+Temporary commit content 3278
