Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -188,3 +188,4 @@ Temporary commit content 2024
 Temporary commit content 2029
 Temporary commit content 2063
 Temporary commit content 2085
+Temporary commit content 2089
