Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -41,3 +41,4 @@ Temporary commit content 400
 Temporary commit content 416
 Temporary commit content 424
 Temporary commit content 428
+Temporary commit content 439
