Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -109,3 +109,4 @@ Temporary commit content 1175
 Temporary commit content 1191
 Temporary commit content 1207
 Temporary commit content 1229
+Temporary commit content 1241
