Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -129,3 +129,4 @@ Temporary commit content 1399
 Temporary commit content 1422
 Temporary commit content 1423
 Temporary commit content 1440
+Temporary commit content 1455
