Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -211,3 +211,4 @@ Temporary commit content 2384
 Temporary commit content 2454
 Temporary commit content 2484
 Temporary commit content 2498
+Temporary commit content 2523
