Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -335,3 +335,4 @@ Temporary commit content 3938
 Temporary commit content 3940
 Temporary commit content 3962
 Temporary commit content 3967
+Temporary commit content 3971
