Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -340,3 +340,4 @@ Temporary commit content 3986
 Temporary commit content 3995
 Temporary commit content 4002
 Temporary commit content 4004
+Temporary commit content 4043
