Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -347,3 +347,4 @@ Temporary commit content 4086
 Temporary commit content 4125
 Temporary commit content 4135
 Temporary commit content 4156
+Temporary commit content 4180
