Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -267,3 +267,4 @@ Temporary commit content 3094
 Temporary commit content 3095
 Temporary commit content 3101
 Temporary commit content 3113
+Temporary commit content 3119
