Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -114,3 +114,4 @@ Temporary commit content 1255
 Temporary commit content 1264
 Temporary commit content 1274
 Temporary commit content 1278
+Temporary commit content 1290
