Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -44,3 +44,4 @@ Temporary commit content 428
 Temporary commit content 439
 Temporary commit content 446
 Temporary commit content 470
+Temporary commit content 471
