Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -255,3 +255,4 @@ Temporary commit content 3033
 Temporary commit content 3035
 Temporary commit content 3040
 Temporary commit content 3046
+Temporary commit content 3060
