Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -39,3 +39,4 @@ Temporary commit content 389
 Temporary commit content 390
 Temporary commit content 400
 Temporary commit content 416
+Temporary commit content 424
