Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -144,3 +144,4 @@ Temporary commit content 1577
 Temporary commit content 1578
 Temporary commit content 1581
 Temporary commit content 1594
+Temporary commit content 1616
