Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -304,3 +304,4 @@ Temporary commit content 3470
 Temporary commit content 3475
 Temporary commit content 3489
 Temporary commit content 3502
+Temporary commit content 3518
