Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -228,3 +228,4 @@ Temporary commit content 2689
 Temporary commit content 2702
 Temporary commit content 2713
 Temporary commit content 2718
+Temporary commit content 2730
