Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -177,3 +177,4 @@ Temporary commit content 1904
 Temporary commit content 1915
 Temporary commit content 1932
 Temporary commit content 1935
+Temporary commit content 1937
