Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -380,3 +380,4 @@ Temporary commit content 4498
 Temporary commit content 4506
 Temporary commit content 4514
 Temporary commit content 4527
+Temporary commit content 4554
