Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -101,3 +101,4 @@ Temporary commit content 998
 Temporary commit content 1024
 Temporary commit content 1026
 Temporary commit content 1032
+Temporary commit content 1060
