Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -231,3 +231,4 @@ Temporary commit content 2718
 Temporary commit content 2730
 Temporary commit content 2742
 Temporary commit content 2743
+Temporary commit content 2759
