Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -141,3 +141,4 @@ Temporary commit content 1540
 Temporary commit content 1548
 Temporary commit content 1557
 Temporary commit content 1577
+Temporary commit content 1578
