Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -234,3 +234,4 @@ Temporary commit content 2743
 Temporary commit content 2759
 Temporary commit content 2765
 Temporary commit content 2770
+Temporary commit content 2771
