Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -275,3 +275,4 @@ Temporary commit content 3156
 Temporary commit content 3167
 Temporary commit content 3170
 Temporary commit content 3172
+Temporary commit content 3187
