Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -189,3 +189,4 @@ Temporary commit content 2029
 Temporary commit content 2063
 Temporary commit content 2085
 Temporary commit content 2089
+Temporary commit content 2093
