Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -154,3 +154,4 @@ Temporary commit content 1684
 Temporary commit content 1686
 Temporary commit content 1688
 Temporary commit content 1713
+Temporary commit content 1715
