Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -218,3 +218,4 @@ Temporary commit content 2570
 Temporary commit content 2595
 Temporary commit content 2605
 Temporary commit content 2607
+Temporary commit content 2631
