Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -102,3 +102,4 @@ Temporary commit content 1024
 Temporary commit content 1026
 Temporary commit content 1032
 Temporary commit content 1060
+Temporary commit content 1067
