Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -40,3 +40,4 @@ Temporary commit content 390
 Temporary commit content 400
 Temporary commit content 416
 Temporary commit content 424
+Temporary commit content 428
