Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -133,3 +133,4 @@ Temporary commit content 1455
 Temporary commit content 1458
 Temporary commit content 1467
 Temporary commit content 1491
+Temporary commit content 1498
