Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -66,3 +66,4 @@ Temporary commit content 600
 Temporary commit content 613
 Temporary commit content 619
 Temporary commit content 634
+Temporary commit content 635
