Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -91,3 +91,4 @@ Temporary commit content 833
 Temporary commit content 849
 Temporary commit content 861
 Temporary commit content 886
+Temporary commit content 903
