Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -396,3 +396,4 @@ Temporary commit content 4698
 Temporary commit content 4699
 Temporary commit content 4704
 Temporary commit content 4712
+Temporary commit content 4723
