Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -67,3 +67,4 @@ Temporary commit content 613
 Temporary commit content 619
 Temporary commit content 634
 Temporary commit content 635
+Temporary commit content 641
