Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -83,3 +83,4 @@ Temporary commit content 749
 Temporary commit content 759
 Temporary commit content 768
 Temporary commit content 769
+Temporary commit content 784
