Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -52,3 +52,4 @@ Temporary commit content 493
 Temporary commit content 495
 Temporary commit content 496
 Temporary commit content 513
+Temporary commit content 520
