Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -323,3 +323,4 @@ Temporary commit content 3711
 Temporary commit content 3722
 Temporary commit content 3771
 Temporary commit content 3812
+Temporary commit content 3815
