Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -162,3 +162,4 @@ Temporary commit content 1739
 Temporary commit content 1746
 Temporary commit content 1747
 Temporary commit content 1756
+Temporary commit content 1776
