Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -269,3 +269,4 @@ Temporary commit content 3101
 Temporary commit content 3113
 Temporary commit content 3119
 Temporary commit content 3126
+Temporary commit content 3144
