Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -418,3 +418,4 @@ Temporary commit content 4954
 Temporary commit content 4965
 Temporary commit content 4970
 Temporary commit content 4973
+Temporary commit content 4990
