Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -277,3 +277,4 @@ Temporary commit content 3170
 Temporary commit content 3172
 Temporary commit content 3187
 Temporary commit content 3201
+Temporary commit content 3205
