Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -237,3 +237,4 @@ Temporary commit content 2770
 Temporary commit content 2771
 Temporary commit content 2819
 Temporary commit content 2832
+Temporary commit content 2839
