Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -409,3 +409,4 @@ Temporary commit content 4851
 Temporary commit content 4860
 Temporary commit content 4868
 Temporary commit content 4879
+Temporary commit content 4909
