Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -77,3 +77,4 @@ Temporary commit content 725
 Temporary commit content 736
 Temporary commit content 739
 Temporary commit content 741
+Temporary commit content 742
