Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -28,3 +28,4 @@ Temporary commit content 288
 Temporary commit content 308
 Temporary commit content 311
 Temporary commit content 321
+Temporary commit content 325
