Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -212,3 +212,4 @@ Temporary commit content 2454
 Temporary commit content 2484
 Temporary commit content 2498
 Temporary commit content 2523
+Temporary commit content 2528
