Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -384,3 +384,4 @@ Temporary commit content 4554
 Temporary commit content 4560
 Temporary commit content 4563
 Temporary commit content 4583
+Temporary commit content 4588
