Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -321,3 +321,4 @@ Temporary commit content 3663
 Temporary commit content 3671
 Temporary commit content 3711
 Temporary commit content 3722
+Temporary commit content 3771
