Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -98,3 +98,4 @@ Temporary commit content 929
 Temporary commit content 969
 Temporary commit content 981
 Temporary commit content 998
+Temporary commit content 1024
