Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -146,3 +146,4 @@ Temporary commit content 1581
 Temporary commit content 1594
 Temporary commit content 1616
 Temporary commit content 1617
+Temporary commit content 1622
