Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -262,3 +262,4 @@ Temporary commit content 3086
 Temporary commit content 3088
 Temporary commit content 3089
 Temporary commit content 3090
+Temporary commit content 3093
