Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -36,3 +36,4 @@ Temporary commit content 373
 Temporary commit content 385
 Temporary commit content 386
 Temporary commit content 389
+Temporary commit content 390
