Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -105,3 +105,4 @@ Temporary commit content 1060
 Temporary commit content 1067
 Temporary commit content 1077
 Temporary commit content 1129
+Temporary commit content 1175
