Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -86,3 +86,4 @@ Temporary commit content 769
 Temporary commit content 784
 Temporary commit content 785
 Temporary commit content 822
+Temporary commit content 823
