Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -400,3 +400,4 @@ Temporary commit content 4723
 Temporary commit content 4736
 Temporary commit content 4740
 Temporary commit content 4765
+Temporary commit content 4766
