Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -202,3 +202,4 @@ Temporary commit content 2239
 Temporary commit content 2273
 Temporary commit content 2287
 Temporary commit content 2292
+Temporary commit content 2300
