Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -276,3 +276,4 @@ Temporary commit content 3167
 Temporary commit content 3170
 Temporary commit content 3172
 Temporary commit content 3187
+Temporary commit content 3201
