Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -93,3 +93,4 @@ Temporary commit content 861
 Temporary commit content 886
 Temporary commit content 903
 Temporary commit content 913
+Temporary commit content 919
