Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -55,3 +55,4 @@ Temporary commit content 513
 Temporary commit content 520
 Temporary commit content 525
 Temporary commit content 544
+Temporary commit content 549
