Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -72,3 +72,4 @@ Temporary commit content 644
 Temporary commit content 658
 Temporary commit content 659
 Temporary commit content 681
+Temporary commit content 683
