Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -107,3 +107,4 @@ Temporary commit content 1077
 Temporary commit content 1129
 Temporary commit content 1175
 Temporary commit content 1191
+Temporary commit content 1207
