Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -254,3 +254,4 @@ Temporary commit content 3019
 Temporary commit content 3033
 Temporary commit content 3035
 Temporary commit content 3040
+Temporary commit content 3046
