Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -71,3 +71,4 @@ Temporary commit content 641
 Temporary commit content 644
 Temporary commit content 658
 Temporary commit content 659
+Temporary commit content 681
