Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -402,3 +402,4 @@ Temporary commit content 4740
 Temporary commit content 4765
 Temporary commit content 4766
 Temporary commit content 4769
+Temporary commit content 4788
