Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -131,3 +131,4 @@ Temporary commit content 1423
 Temporary commit content 1440
 Temporary commit content 1455
 Temporary commit content 1458
+Temporary commit content 1467
