Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -223,3 +223,4 @@ Temporary commit content 2632
 Temporary commit content 2633
 Temporary commit content 2649
 Temporary commit content 2658
+Temporary commit content 2688
