Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -253,3 +253,4 @@ Temporary commit content 3014
 Temporary commit content 3019
 Temporary commit content 3033
 Temporary commit content 3035
+Temporary commit content 3040
