Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -201,3 +201,4 @@ Temporary commit content 2224
 Temporary commit content 2239
 Temporary commit content 2273
 Temporary commit content 2287
+Temporary commit content 2292
