Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -333,3 +333,4 @@ Temporary commit content 3924
 Temporary commit content 3934
 Temporary commit content 3938
 Temporary commit content 3940
+Temporary commit content 3962
