Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -355,3 +355,4 @@ Temporary commit content 4219
 Temporary commit content 4228
 Temporary commit content 4229
 Temporary commit content 4242
+Temporary commit content 4269
