Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -415,3 +415,4 @@ Temporary commit content 4924
 Temporary commit content 4940
 Temporary commit content 4948
 Temporary commit content 4954
+Temporary commit content 4965
