--- a/edt/index.html
+++ b/edt/index.html
@@ -21,3 +21,4 @@ Temporary commit content 207
 Temporary commit content 223
 Temporary commit content 232
 Temporary commit content 260
+Temporary commit content 266
