Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -346,3 +346,4 @@ Temporary commit content 4072
 Temporary commit content 4086
 Temporary commit content 4125
 Temporary commit content 4135
+Temporary commit content 4156
