Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -351,3 +351,4 @@ Temporary commit content 4180
 Temporary commit content 4183
 Temporary commit content 4184
 Temporary commit content 4204
+Temporary commit content 4219
