Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -37,3 +37,4 @@ Temporary commit content 385
 Temporary commit content 386
 Temporary commit content 389
 Temporary commit content 390
+Temporary commit content 400
