Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -337,3 +337,4 @@ Temporary commit content 3962
 Temporary commit content 3967
 Temporary commit content 3971
 Temporary commit content 3986
+Temporary commit content 3995
