Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -329,3 +329,4 @@ Temporary commit content 3848
 Temporary commit content 3855
 Temporary commit content 3901
 Temporary commit content 3907
+Temporary commit content 3924
