Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -314,3 +314,4 @@ Temporary commit content 3574
 Temporary commit content 3587
 Temporary commit content 3599
 Temporary commit content 3603
+Temporary commit content 3624
