Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -124,3 +124,4 @@ Temporary commit content 1355
 Temporary commit content 1361
 Temporary commit content 1381
 Temporary commit content 1388
+Temporary commit content 1397
