Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -264,3 +264,4 @@ Temporary commit content 3089
 Temporary commit content 3090
 Temporary commit content 3093
 Temporary commit content 3094
+Temporary commit content 3095
