Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -288,3 +288,4 @@ Temporary commit content 3278
 Temporary commit content 3289
 Temporary commit content 3302
 Temporary commit content 3303
+Temporary commit content 3322
