Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -286,3 +286,4 @@ Temporary commit content 3234
 Temporary commit content 3241
 Temporary commit content 3278
 Temporary commit content 3289
+Temporary commit content 3302
