Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -379,3 +379,4 @@ Temporary commit content 4494
 Temporary commit content 4498
 Temporary commit content 4506
 Temporary commit content 4514
+Temporary commit content 4527
