Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -169,3 +169,4 @@ Temporary commit content 1861
 Temporary commit content 1871
 Temporary commit content 1883
 Temporary commit content 1890
+Temporary commit content 1895
