Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -164,3 +164,4 @@ Temporary commit content 1747
 Temporary commit content 1756
 Temporary commit content 1776
 Temporary commit content 1836
+Temporary commit content 1843
