Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -258,3 +258,4 @@ Temporary commit content 3046
 Temporary commit content 3060
 Temporary commit content 3062
 Temporary commit content 3085
+Temporary commit content 3086
