Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -225,3 +225,4 @@ Temporary commit content 2649
 Temporary commit content 2658
 Temporary commit content 2688
 Temporary commit content 2689
+Temporary commit content 2702
