Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -394,3 +394,4 @@ Temporary commit content 4686
 Temporary commit content 4692
 Temporary commit content 4698
 Temporary commit content 4699
+Temporary commit content 4704
