Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -408,3 +408,4 @@ Temporary commit content 4824
 Temporary commit content 4851
 Temporary commit content 4860
 Temporary commit content 4868
+Temporary commit content 4879
