Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -356,3 +356,4 @@ Temporary commit content 4228
 Temporary commit content 4229
 Temporary commit content 4242
 Temporary commit content 4269
+Temporary commit content 4277
