Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -152,3 +152,4 @@ Temporary commit content 1662
 Temporary commit content 1667
 Temporary commit content 1684
 Temporary commit content 1686
+Temporary commit content 1688
