Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -54,3 +54,4 @@ Temporary commit content 496
 Temporary commit content 513
 Temporary commit content 520
 Temporary commit content 525
+Temporary commit content 544
