Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -186,3 +186,4 @@ Temporary commit content 2006
 Temporary commit content 2016
 Temporary commit content 2024
 Temporary commit content 2029
+Temporary commit content 2063
