Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -257,3 +257,4 @@ Temporary commit content 3040
 Temporary commit content 3046
 Temporary commit content 3060
 Temporary commit content 3062
+Temporary commit content 3085
