Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -191,3 +191,4 @@ Temporary commit content 2085
 Temporary commit content 2089
 Temporary commit content 2093
 Temporary commit content 2128
+Temporary commit content 2141
