Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -104,3 +104,4 @@ Temporary commit content 1032
 Temporary commit content 1060
 Temporary commit content 1067
 Temporary commit content 1077
+Temporary commit content 1129
