Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -112,3 +112,4 @@ Temporary commit content 1229
 Temporary commit content 1241
 Temporary commit content 1255
 Temporary commit content 1264
+Temporary commit content 1274
