Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -271,3 +271,4 @@ Temporary commit content 3119
 Temporary commit content 3126
 Temporary commit content 3144
 Temporary commit content 3146
+Temporary commit content 3156
