Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -166,3 +166,4 @@ Temporary commit content 1776
 Temporary commit content 1836
 Temporary commit content 1843
 Temporary commit content 1861
+Temporary commit content 1871
