Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -199,3 +199,4 @@ Temporary commit content 2220
 Temporary commit content 2222
 Temporary commit content 2224
 Temporary commit content 2239
+Temporary commit content 2273
