Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -330,3 +330,4 @@ Temporary commit content 3855
 Temporary commit content 3901
 Temporary commit content 3907
 Temporary commit content 3924
+Temporary commit content 3934
