Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -31,3 +31,4 @@ Temporary commit content 321
 Temporary commit content 325
 Temporary commit content 342
 Temporary commit content 354
+Temporary commit content 359
