Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -190,3 +190,4 @@ Temporary commit content 2063
 Temporary commit content 2085
 Temporary commit content 2089
 Temporary commit content 2093
+Temporary commit content 2128
