Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -127,3 +127,4 @@ Temporary commit content 1388
 Temporary commit content 1397
 Temporary commit content 1399
 Temporary commit content 1422
+Temporary commit content 1423
