Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -295,3 +295,4 @@ Temporary commit content 3368
 Temporary commit content 3411
 Temporary commit content 3415
 Temporary commit content 3430
+Temporary commit content 3434
