Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -214,3 +214,4 @@ Temporary commit content 2498
 Temporary commit content 2523
 Temporary commit content 2528
 Temporary commit content 2569
+Temporary commit content 2570
