Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -117,3 +117,4 @@ Temporary commit content 1278
 Temporary commit content 1290
 Temporary commit content 1312
 Temporary commit content 1313
+Temporary commit content 1316
