Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -270,3 +270,4 @@ Temporary commit content 3113
 Temporary commit content 3119
 Temporary commit content 3126
 Temporary commit content 3144
+Temporary commit content 3146
