Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -53,3 +53,4 @@ Temporary commit content 495
 Temporary commit content 496
 Temporary commit content 513
 Temporary commit content 520
+Temporary commit content 525
