Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -75,3 +75,4 @@ Temporary commit content 681
 Temporary commit content 683
 Temporary commit content 725
 Temporary commit content 736
+Temporary commit content 739
