Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -227,3 +227,4 @@ Temporary commit content 2688
 Temporary commit content 2689
 Temporary commit content 2702
 Temporary commit content 2713
+Temporary commit content 2718
