Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -96,3 +96,4 @@ Temporary commit content 913
 Temporary commit content 919
 Temporary commit content 929
 Temporary commit content 969
+Temporary commit content 981
