Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -417,3 +417,4 @@ Temporary commit content 4948
 Temporary commit content 4954
 Temporary commit content 4965
 Temporary commit content 4970
+Temporary commit content 4973
