Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -172,3 +172,4 @@ Temporary commit content 1890
 Temporary commit content 1895
 Temporary commit content 1896
 Temporary commit content 1899
+Temporary commit content 1900
