Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -294,3 +294,4 @@ Temporary commit content 3348
 Temporary commit content 3368
 Temporary commit content 3411
 Temporary commit content 3415
+Temporary commit content 3430
