Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -376,3 +376,4 @@ Temporary commit content 4467
 Temporary commit content 4475
 Temporary commit content 4492
 Temporary commit content 4494
+Temporary commit content 4498
