Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -344,3 +344,4 @@ Temporary commit content 4043
 Temporary commit content 4069
 Temporary commit content 4072
 Temporary commit content 4086
+Temporary commit content 4125
