Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -74,3 +74,4 @@ Temporary commit content 659
 Temporary commit content 681
 Temporary commit content 683
 Temporary commit content 725
+Temporary commit content 736
