Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -313,3 +313,4 @@ Temporary commit content 3564
 Temporary commit content 3574
 Temporary commit content 3587
 Temporary commit content 3599
+Temporary commit content 3603
