Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -245,3 +245,4 @@ Temporary commit content 2907
 Temporary commit content 2917
 Temporary commit content 2918
 Temporary commit content 2919
+Temporary commit content 2948
