Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -165,3 +165,4 @@ Temporary commit content 1756
 Temporary commit content 1776
 Temporary commit content 1836
 Temporary commit content 1843
+Temporary commit content 1861
