Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -283,3 +283,4 @@ Temporary commit content 3221
 Temporary commit content 3226
 Temporary commit content 3228
 Temporary commit content 3234
+Temporary commit content 3241
