Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -342,3 +342,4 @@ Temporary commit content 4002
 Temporary commit content 4004
 Temporary commit content 4043
 Temporary commit content 4069
+Temporary commit content 4072
