Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -179,3 +179,4 @@ Temporary commit content 1932
 Temporary commit content 1935
 Temporary commit content 1937
 Temporary commit content 1943
+Temporary commit content 1963
