Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -128,3 +128,4 @@ Temporary commit content 1397
 Temporary commit content 1399
 Temporary commit content 1422
 Temporary commit content 1423
+Temporary commit content 1440
