Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -244,3 +244,4 @@ Temporary commit content 2889
 Temporary commit content 2907
 Temporary commit content 2917
 Temporary commit content 2918
+Temporary commit content 2919
