Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -205,3 +205,4 @@ Temporary commit content 2292
 Temporary commit content 2300
 Temporary commit content 2323
 Temporary commit content 2356
+Temporary commit content 2371
