Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -97,3 +97,4 @@ Temporary commit content 919
 Temporary commit content 929
 Temporary commit content 969
 Temporary commit content 981
+Temporary commit content 998
