Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -395,3 +395,4 @@ Temporary commit content 4692
 Temporary commit content 4698
 Temporary commit content 4699
 Temporary commit content 4704
+Temporary commit content 4712
